@@ -1,4 +1,7 @@
 2016-05-02  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* config/amanda/amanda_configure.m4: AC_SEARCH_LIBS([shm_open], [rt])
+
+2016-05-02  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* xfer-src/source-shm-ring.c: Add the file
 
 2016-05-02  Jean-Louis Martineau <JMartineau@carbonite.com>
